<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".booking_details">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hos2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/hh"
            android:gravity="center|start"
            android:paddingRight="20dp"
            android:text="Details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@color/white"
            android:paddingBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E39090">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="@string/col1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="@string/col2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="@string/col3"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/n_delatiels"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="@string/rowname"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/q_deltails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="@string/rowquantity"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/type_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="@string/rowbloodtype"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:background="#E39090"
                    android:padding="10sp"
                    android:text="Phone Number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/phone_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="01141025780"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:background="#E39090"
                    android:padding="10sp"
                    android:text="Hospital Name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/hos_deitals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="Eldemerdash"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>


            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:background="#E39090"
                    android:padding="10sp"
                    android:text="Payment"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/payment_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="No payment"
                    android:textAlignment="center"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:background="#E39090"
                    android:padding="10sp"
                    android:text="Time"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/time1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:padding="10sp"
                    android:text="02:00:00"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="43dp"
            android:layout_height="35dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@android:drawable/ic_delete"
            android:onClick="dell"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>